--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       <img id="mushroom" src="img/mushroom.png"></img>
       <img id="flower" src="img/flower.png"></img>
       <img id="star" src="img/star.png"></img>
+      <img id="2up" src="img/2up.png"></img>
+      <img id="3up" src="img/3up.png"></img>
+      <img id="5up" src="img/5up.png"></img>
     </span>
     <script type="text/javascript" src="script.js"></script>
   </body>
